@@ -2,7 +2,7 @@
 <beans>
 
 	<bean id="goAnnotManager" class="edu.mcw.rgd.goa.GoAnnotManager">
-        <property name="version" value="GOA rat annotation pipeline   -- build March 2, 2020" />
+        <property name="version" value="GOA rat annotation pipeline   -- build March 3, 2020" />
 	    <property name="dataValidation" ref="dataValidation"/>
 	    <property name="dao" ref="dao"/>
 	    <property name="specialRefRgdId" value="1600115"/>
