@@ -52,6 +52,7 @@ log4j.appender.logfileUnMatchedGOID.layout.ConversionPattern=[%d] %m%n
 
 # duplAnnot log (incoming annot matching annot in RGD)
 log4j.logger.duplAnnot=info,logDuplAnnot
+log4j.additivity.duplAnnot=false
 log4j.appender.logDuplAnnot=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.logDuplAnnot.Append=true
 log4j.appender.logDuplAnnot.DatePattern='.'yyyy-MM-dd
@@ -97,16 +98,6 @@ log4j.appender.logfileRejected.File=logs/GoaRejected.log
 log4j.appender.logfileRejected.layout=org.apache.log4j.PatternLayout
 log4j.appender.logfileRejected.layout.ConversionPattern=[%d] %m%n
 
-######## redirect all spring framework activity into a separate log
-log4j.logger.org.springframework=info, log_spring
-log4j.additivity.org.springframework=false
-log4j.appender.log_spring=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.log_spring.DatePattern='.'yyyy-MM
-log4j.appender.log_spring.Append=true
-log4j.appender.log_spring.File=logs/spring.log
-log4j.appender.log_spring.layout=org.apache.log4j.PatternLayout
-log4j.appender.log_spring.layout.ConversionPattern=[%d] - %m%n
-
 # highLevelGoTerm logger
 log4j.logger.highLevelGoTerm=debug, highLevelGoTerm
 log4j.additivity.highLevelGoTerm=false
@@ -145,11 +136,11 @@ log4j.appender.obsoleteRelInAnnotExt.Append=true
 log4j.appender.obsoleteRelInAnnotExt.layout=org.apache.log4j.PatternLayout
 log4j.appender.obsoleteRelInAnnotExt.layout.ConversionPattern=%d - %m%n
 
-log4j.logger.test=debug, test
-log4j.additivity.test=false
-log4j.appender.test=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.test.File=logs/test.log
-log4j.appender.test.DatePattern='.'yyyy-MM
-log4j.appender.test.Append=true
-log4j.appender.test.layout=org.apache.log4j.PatternLayout
-log4j.appender.test.layout.ConversionPattern=%d - %m%n
+log4j.logger.skippedAnnots=info, skippedAnnots
+log4j.additivity.skippedAnnots=false
+log4j.appender.skippedAnnots=org.apache.log4j.DailyRollingFileAppender
+log4j.appender.skippedAnnots.File=logs/skippedAnnots.log
+log4j.appender.skippedAnnots.DatePattern='.'yyyy-MM
+log4j.appender.skippedAnnots.Append=true
+log4j.appender.skippedAnnots.layout=org.apache.log4j.PatternLayout
+log4j.appender.skippedAnnots.layout.ConversionPattern=%d - %m%n
