@@ -1,3 +1,7 @@
+Mar 03, 2020
+- refactored code to address major bottleneck: annot checks in RGD
+- generated file goa_rgd.txt no longer contains duplicates and is sorted alphabetically
+
 Mar 02, 2020
 - tuned up handling of stale annotations:
     if net annot drop could be greater than specified threshold (currently 5%), then abort the deletions and report it
